Fix tab strip rendering at non-integral scale factors in MD.

This fixes two issues:
* Hairline horizontal borders were actually drawing with thickness equal
  to the dsf for non-integral scale factors, due to loss of precision.
* The bottom of the tab fill path was not aligned with whole pixels,
  which was partially causing an artifact when ClipPath was called.

BUG=615153

Review-Url: https://codereview.chromium.org/2085673004
Cr-Commit-Position: refs/heads/master@{#401171}

Former-commit-id: a33441839f9a8d028db80a164891d32eaaf50b0b